fixed div position overlapping with the navbar

--- a/styles.scss
+++ b/styles.scss
@@ -30,7 +30,7 @@ body{
 
 .home-div{
     position: absolute;
-    top: 0;
+    top: 80px;
     bottom: 0;
     left: 0;
     right: 0;
